--- a/Flight/.classpath
+++ b/Flight/.classpath
@@ -4,8 +4,9 @@
 	<classpathentry kind="src" path="TestFlight"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="forms-1.3.0.jar" sourcepath="forms-1.3.0-src.zip"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="/Users/viktor/Documents/workspace/throunH2/jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="/Users/viktor/Documents/workspace/throunH2/postgresql-9.4.1208.jre6.jar"/>
+	<classpathentry kind="lib" path="/Users/viktor/Documents/workspace/throunH2/Flight/TestFlight/testSearch/junit-4.12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
