--- a/Flight/.project
+++ b/Flight/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>testSearch</name>
+			<type>2</type>
+			<location>/Users/viktor/Documents/workspace/throunH2/Flight/TestFlight/testSearch</location>
+		</link>
+	</linkedResources>
 </projectDescription>
